few changes on pyvenv.cfg Scripts\activate settings.py

--- a/Administracion/pyvenv.cfg
+++ b/Administracion/pyvenv.cfg
@@ -1,6 +1,6 @@
 # cambiar variable "home" por la ruta de instalación de Python, puedes usar como referencia la que está añadida
 # si la versión de Python es distinta, la puedes cambiar. Ejecutar el comando 'python --version' para saber la versión que tienes instalada.
 
-home = C:\Users\luis_\AppData\Local\Programs\Python\Python310
+home = C:\Users\Axel\AppData\Local\Programs\Python\Python310
 include-system-site-packages = false
 version = 3.10.2
